--- a/src/assets/Content/default/sass/_global.scss
+++ b/src/assets/Content/default/sass/_global.scss
@@ -670,6 +670,7 @@ input[type=reset] {
                     &.line {
                         background: #f5f5f5;                        
                         text-align: left !important;
+                        color: $color-title;
                     }
                 }
             }
