update first phase v2.2

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,125 +1,74 @@
-
 <div id="header">
   <div class="top-menu-wrapper" id="top-menu-wrapper">
-      <div class="wrapper">
-          <div class="row">
-              <div class="col-md-8 hidden-sm hidden-xs top-main-nav">
-                  <!-- <ul class="" id="top-main-nav">
-                      <li id="home">
-                          <a href="/" title="หน้าหลัก">หน้าหลัก</a>
-                      </li>
-                      <li id="about">
-                          <a href="/AboutUs" title="เกี่ยวกับเรา">เกี่ยวกับเรา</a>
-                      </li>
-                      <li id="lh-group">
-                          <a href="#" title="กลุ่มการเงินแลนด์แอนเฮ้าส์">กลุ่มการเงินแลนด์แอนเฮ้าส์</a>
-                          <ul>
-                            <li><a href="#" title="บริษัท เเอล เอช ไฟเเนนซ์เชียล กรุ๊ป จำกัด (มหาชน)">บริษัท เเอล เอช ไฟเเนนซ์เชียล กรุ๊ป จำกัด (มหาชน)</a></li>
-                            <li><a href="#" title="ธนาคารเเลนด์ เเอนด์ เฮ้าส์ จำกัด (มหาชน)">ธนาคารเเลนด์ เเอนด์ เฮ้าส์ จำกัด (มหาชน)</a></li>
-                            <li><a href="#" title="บริษัทหลักทรัพย์จัดการกองทุน เเลนด์ เเอนด์ เฮ้าส์  จำกัด">บริษัทหลักทรัพย์จัดการกองทุน เเลนด์ เเอนด์ เฮ้าส์ จำกัด</a></li>
-                            <li><a href="#" title="บริษัทหลักทรัพย์ แลนด์ แอนด์ เฮ้าส์ จำกัด (มหาชน)">บริษัทหลักทรัพย์ แลนด์ แอนด์ เฮ้าส์ จำกัด (มหาชน)</a></li>
-                          </ul>
-                      </li>
-                      <li id="contact">
-                          <a href="/Contact" title="ติดต่อเรา">ติดต่อเรา</a>
-                      </li>                       
-                      <li>
-                          <a href="/Investment/SellingPoint" title="สถานที่ซื้อขายหน่วยลงทุน">สถานที่ซื้อขายหน่วยลงทุน</a>
-                      </li>
-                      <li>
-                          <a href="/Investment/TradingManual" title="ขั้นตอนการซื้อขายหน่วยลงทุน">ขั้นตอนการซื้อขายหน่วยลงทุน</a>
-                      </li>
-                  </ul> -->
-              </div>
-              <div class="col-md-4 top-social-nav">
-                  <ul class="">
-                      <li class="ico-fb">
-                          <a href="#" title="">
-                             บัญชีผู้ใช้: 
-                          </a>
-                      </li>
-                      <li class="ico-line">
-                          <a href="#" title="">
-                              <img src="/assets/Images/icons/icon-login-white.png" />
-                              เนติวัฒน์
-                              <img src="/assets/Images/icons/p_dropdown_select.png" />
-                          </a>
-                      </li>
-                      <li class="ico-yt">
-                          <a href="#" title="">
-                              <img src="/assets/Images/icons/ico-forgot.png" />
-                              ออกจากระบบ
-                          </a>
-                      </li>
-                      <!-- <li class="ico-ig">
-                          <a href="#" title="">
-                              <img src="/assets/Images/icons/ico-ig-white.png" />
-                          </a>
-                      </li> -->
-                  </ul>
-                  <ul class="sw-lang">
-                      <li class="th current">
-                          <a href="#" title="ไทย">ไทย</a>
-                      </li>
-                      <li class="en">
-                          <a href="#" title="Eng">Eng</a>
-                      </li>
-                      <!-- <li class="ch">
-                          <a href="#" title="Chi">Chi</a>
-                      </li> -->
-                  </ul>
-              </div>
-          </div>
-      </div>
+        <div class="wrapper">
+            <div class="row">
+                <div class="col-md-8 hidden-sm hidden-xs top-main-nav">
+                </div>
+                <div class="col-md-4 top-social-nav">
+                    <ul class="">
+                        <li class="ico-fb">
+                            <a href="#" title="">
+                                บัญชีผู้ใช้: 
+                            </a>
+                        </li>
+                        <li class="ico-line">
+                            <a href="#" title="">
+                                <img src="/assets/Images/icons/icon-login-white.png" />
+                                เนติวัฒน์
+                                <img src="/assets/Images/icons/p_dropdown_select.png" />
+                            </a>
+                        </li>
+                        <li class="ico-yt">
+                            <a href="#" title="">
+                                <img src="/assets/Images/icons/ico-forgot.png" />
+                                ออกจากระบบ
+                            </a>
+                        </li>
+                        <!-- <li class="ico-ig">
+                            <a href="#" title="">
+                                <img src="/assets/Images/icons/ico-ig-white.png" />
+                            </a>
+                        </li> -->
+                    </ul>
+                    <ul class="sw-lang">
+                        <li class="th current">
+                            <a href="#" title="ไทย">ไทย</a>
+                        </li>
+                        <li class="en">
+                            <a href="#" title="Eng">Eng</a>
+                        </li>
+                        <!-- <li class="ch">
+                            <a href="#" title="Chi">Chi</a>
+                        </li> -->
+                    </ul>
+                </div>
+            </div>
+        </div>
   </div>
 
   <div class="bottom-menu-wrapper" id="fixed-nav">
       <div class="wrapper">
           <div class="row">
-              <div class="col-lg-5 col-md-2 col-xs-4">
+              <div class="col-lg-3 col-sm-4 col-xs-4">
                   <h1 class="logo">
                       <a href="/">
-                          <img src="/assets/Images/logos/logo-m.png" class="visible-lg-block" />
-                          <img src="/assets/Images/logos/logo-m.png" class="visible-md-block visible-sm-block visible-xs-block" />
+                            <img src="/assets/Images/logos/logo-m-post.jpg" />
                       </a>
                   </h1>
               </div>
 
-              <div class="col-lg-7 col-md-10 col-xs-8">
+              <div class="col-lg-9 col-sm-8 col-xs-8">
                   <nav id="main-nav" class="main-nav">
-                      <div id="menu" class="main-nav-list hidden-sm hidden-xs">
-                          <ul id="bottom-main-nav" >
-                              <li id="myport"><a routerLink="/myport" title="My Port">My Port <span class="icon"></span></a></li>
-                              <li id="transaction"><a routerLink="/transaction" title="กองทุนส่วนบุคคล">ทำรายการ<span class="icon"></span></a></li>
-                              <li id="rmf-ltf"><a routerLink="/rmf-ltf" title="กองทุนสำรองเลี้ยงชีพ">RMF/LTF<span class="icon"></span></a></li>
-                              <li id="report"><a routerLink="/report" title="กองทุนรวมอสังหาริมทรัพย์ REIT">รายงาน<span class="icon"></span></a></li>
-                              <li id="regular-list"><a routerLink="/regular-list" title="บริการนักลงทุน">รายการแบบประจำ <span class="icon"></span></a></li>
-                              <li id="profile"><a routerLink="/profile" title="ข่าวสารและกิจกรรม">ข้อมูลส่วนตัว <span class="icon"></span></a></li>
-                          </ul>                           
-                      </div>
-                      <!-- <div class="header-clicker">
-                          <ul>
-                              <li class="search popup">
-                                  <a href="#" title="Search" class="icon-toggle"><i class="fa fa-search" aria-hidden="true"></i></a>
-                                  <div class="icon-content">
-                                      <a href="javascript:void(0)" class="button-close">Close</a>
-                                      <div id="nav-search">
-
-                                          <div id="uid864770641" class="">
-                                              <form method="get" action="">
-                                                  <div class="input-wrapper">
-                                                      <input name="searchterm" class="input-search " placeholder="Search..." value="" autocomplete="off" type="text">
-                                                  </div>
-                                                  <div class="input-wrapper">
-                                                      <button class="btn-med btn-primary" type="submit"><span>Search</span></button>
-                                                  </div>
-                                              </form>
-                                          </div>
-                                      </div>
-                                  </div>
-                              </li>
-                          </ul>
-                      </div> -->
+                        <div id="menu" class="main-nav-list hidden-sm hidden-xs">
+                            <ul id="bottom-main-nav" >
+                                <li id="myport"><a routerLink="/myport" title="My Port">My Port <span class="icon"></span></a></li>
+                                <li id="transaction"><a routerLink="/transaction" title="กองทุนส่วนบุคคล">ทำรายการ<span class="icon"></span></a></li>
+                                <li id="rmf-ltf"><a routerLink="/rmf-ltf" title="กองทุนสำรองเลี้ยงชีพ">RMF/LTF<span class="icon"></span></a></li>
+                                <li id="report"><a routerLink="/report" title="กองทุนรวมอสังหาริมทรัพย์ REIT">รายงาน<span class="icon"></span></a></li>
+                                <li id="regular-list"><a routerLink="/regular-list" title="บริการนักลงทุน">รายการแบบประจำ <span class="icon"></span></a></li>
+                                <li id="profile"><a routerLink="/profile" title="ข่าวสารและกิจกรรม">ข้อมูลส่วนตัว <span class="icon"></span></a></li>
+                            </ul>                           
+                        </div>
                   </nav>                    
                   <!-- end Nav -->
                   <a id="nav-expander" class="nav-expander fixed">
@@ -129,6 +78,5 @@
           </div>
       </div>
   </div>
-
 </div>
 <!-- header -->
