--- a/src/app/myport/myport.component.html
+++ b/src/app/myport/myport.component.html
@@ -2,7 +2,7 @@
 <div class="" id="maincontainer-wrapper">
     <div class="page-content-wrapper">
         <div class="mutual-fund-wrapper" *ngIf="page == 'dashboard'">
-            <div class="container">
+            <div class="max-width-wrapper">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="tabs-menu-wrapper">
