--- a/src/app/rmf-ltf/rmf-ltf.component.html
+++ b/src/app/rmf-ltf/rmf-ltf.component.html
@@ -2,7 +2,7 @@
 <div class="" id="maincontainer-wrapper">
   <div class="page-content-wrapper">
     <div class="mutual-fund-wrapper" *ngIf="page == 'conclusion'">
-      <div class="container">
+      <div class="max-width-wrapper">
         <div class="row">
           <div class="col-md-12">
             <div class="tabs-menu-wrapper">
@@ -333,7 +333,7 @@
       </div>
     </div>
     <div class="mutual-fund-wrapper" *ngIf="page == 'certificate'">
-      <div class="container">
+      <div class="max-width-wrapper">
         <div class="row">
           <div class="col-md-12">
             <div class="tabs-menu-wrapper">
@@ -568,7 +568,7 @@
 
     </div>
     <div class="mutual-fund-wrapper" *ngIf="page == 'ltf-condition-complete'">
-      <div class="container">
+      <div class="max-width-wrapper">
         <div class="row">
           <div class="col-md-12">
             <div class="tabs-menu-wrapper">
@@ -629,6 +629,10 @@
                       <p>ชื่อผู้ถือหน่วยลงทุน</p>
                       <span>เนติวัฒน์ โชติกร</span>
                     </div>
+                    <div class="col-sm-6 col-md-6">
+                        <p>ที่อยู่</p>
+                        <span>19/259 ซ.จุลดิส แขวงพญาไท เขตราชเทวี กรุงเทพมหานคร 10400</span>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -658,56 +662,50 @@
                       </tr>
                       <tr class="line">
                         <td>
-                          กองทุนที่เน้นตราสารเงิน (KFCRASH)
+                          (KFLTFSTARD) กองทุนเปิดกรุงศรีหุ้นระยะยาวไทยออลสตาร์ปันผล
                         </td>
                         <td colspan="6">&nbsp;</td>
                       </tr>
                       <tr>
-                        <td>
-                          KFCRASH
+                        <td class="text-left">
+                          NET
+                        </td>
+                        <td class="">
+                          07/06/2561
+                        </td>
+                        <td class="">
+                          30
+                        </td>
+                        <td class="">
+                          07/06/2561
                         </td>
                         <td class="txt-right">
-                          03/03/2561
+                          11.1500
                         </td>
                         <td class="txt-right">
-                          SUB
+                          17,055.4525
                         </td>
-                        <td class="txt-right">
-                          11.4523
-                        </td>
-                        <td class="txt-right">
-                          110
-                        </td>
-                        <td class="txt-right">
-                          17,055.45
-                        </td>
-                      </tr>
-                      <tr class="line">
-                        <td>
-                          กองทุนที่เน้นการลงทุนในหุ้น (KFCRASH)
-                        </td>
-                        <td colspan="6">&nbsp;</td>
                       </tr>
                       <tr>
-                        <td>
-                          KFCRASH
-                        </td>
-                        <td class="txt-right">
-                          03/03/2561
-                        </td>
-                        <td class="txt-right">
-                          SUB
-                        </td>
-                        <td class="txt-right">
-                          11.4523
-                        </td>
-                        <td class="txt-right">
-                          110
-                        </td>
-                        <td class="txt-right">
-                          17,055.45
-                        </td>
-                      </tr>
+                          <td class="text-left">
+                            NET
+                          </td>
+                          <td class="">
+                            07/06/2561
+                          </td>
+                          <td class="">
+                            30
+                          </td>
+                          <td class="">
+                            07/06/2561
+                          </td>
+                          <td class="txt-right">
+                            11.1500
+                          </td>
+                          <td class="txt-right">
+                            17,055.4525
+                          </td>
+                        </tr>
                     </tbody>
                   </table>
                 </div>
