--- a/src/assets/Content/default/css/content/contact.css
+++ b/src/assets/Content/default/css/content/contact.css
@@ -164,7 +164,7 @@
   .contact-wrapper .contact-form-wrapper p {
     margin-bottom: 10px; }
     .contact-wrapper .contact-form-wrapper p span {
-      color: #C90A11; }
+      color: #FF4A4A; }
   .contact-wrapper .contact-form-wrapper .captcha {
     min-height: 80px;
     color: #5a5a5a; }
