--- a/src/assets/Content/default/css/content/login.css
+++ b/src/assets/Content/default/css/content/login.css
@@ -29,7 +29,6 @@
 
 /* note : for IE8,7 need css3pie helper*/
 #main-wrapper {
-  background-image: url("/assets/Images/banners/banner-login.png");
   width: 100%;
   min-height: 100vh;
   display: -webkit-box;
@@ -45,8 +44,8 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  padding: 15px;
-  background-position: center;
+  padding: 0;
+  background-image: url("/assets/Images/banners/banner-login.png");
   background-size: cover;
   background-repeat: no-repeat; }
   @media screen and (max-width: 767px) {
@@ -56,12 +55,11 @@
 
 .copyright {
   display: block;
-  vertical-align: middle;
   text-align: center;
   width: 100%;
   z-index: 1;
   text-decoration: none;
-  margin-top: 45%;
+  margin-top: 100px;
   position: relative; }
   @media screen and (max-width: 767px) {
     .copyright {
@@ -133,7 +131,8 @@
   position: relative;
   max-width: 100%;
   padding: 0;
-  margin: 0 auto; }
+  margin: 0 auto;
+  margin-top: 240px; }
   .contact-wrapper .detail-login-wrapper {
     position: relative;
     max-width: 100%;
@@ -143,12 +142,9 @@
     .contact-wrapper .detail-login-wrapper h4 {
       display: block; }
   .contact-wrapper .contact-popup {
-    position: static;
-    display: inline-block;
-    vertical-align: top;
-    width: auto;
+    width: 100%;
     height: auto;
-    margin: 0 10px; }
+    margin: 0 auto; }
   .contact-wrapper .caption-link {
     width: 70px;
     height: 70px;
@@ -189,12 +185,11 @@
     margin: 0 -5px;
     padding: 10px 0; }
   .contact-wrapper .popup-content {
-    position: absolute;
-    background: rgba(28, 165, 155, 0.8);
+    background-image: url("/assets/Images/bg/bg-login-box.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
     min-height: 460px;
     min-width: 100%;
-    right: 0;
-    top: 150px;
     opacity: 1;
     z-index: 1;
     text-align: left;
@@ -208,8 +203,8 @@
         position: relative; } }
     .contact-wrapper .popup-content h1, .contact-wrapper .popup-content h2, .contact-wrapper .popup-content h3 {
       margin: 0;
-      margin-bottom: 20px;
-      color: #1CA59B; }
+      color: #fff;
+      text-align: center; }
     .contact-wrapper .popup-content p, .contact-wrapper .popup-content span {
       font-size: 22px;
       line-height: 24px;
@@ -281,9 +276,6 @@
       -o-transition: all 0.2s ease-in-out;
       transition: all 0.2s ease-in-out;
       z-index: 20; }
-      .contact-wrapper .popup-content .btn-close:hover {
-        /*color: $color-primary;
-                border-color: $color-primary;*/ }
     .contact-wrapper .popup-content .gmap {
       margin-top: 40px;
       margin-bottom: 10px; }
@@ -291,7 +283,7 @@
       text-align: center; }
     .contact-wrapper .popup-content .btn-red p {
       text-align: left;
-      color: #C90A11;
+      color: #FF4A4A;
       margin-top: 7px; }
     .contact-wrapper .popup-content .btn-wrapper-right {
       text-align: right;
@@ -313,12 +305,9 @@
         text-align: left;
         margin-top: 7px; }
   .contact-wrapper .popup-side-content-left {
-    position: absolute;
     background: rgba(28, 165, 155, 0.8);
     height: 460px;
     max-width: 100%;
-    right: 0;
-    top: 150px;
     opacity: 1;
     z-index: 1;
     text-align: left;
@@ -395,7 +384,7 @@
       text-align: center; }
     .contact-wrapper .popup-side-content-left .btn-red p {
       text-align: left;
-      color: #C90A11;
+      color: #FF4A4A;
       margin-top: 7px; }
     .contact-wrapper .popup-side-content-left .btn-primary p {
       text-align: left;
@@ -418,13 +407,10 @@
         text-align: left;
         margin-top: 7px; }
   .contact-wrapper .popup-side-content-right {
-    position: absolute;
     background: rgba(28, 165, 155, 0.8);
     float: right;
     min-width: 100%;
     min-height: 460px;
-    right: 0;
-    top: 150px;
     opacity: 1;
     z-index: 1;
     text-align: left;
@@ -516,7 +502,7 @@
       text-align: center; }
     .contact-wrapper .popup-side-content-right .btn-red p {
       text-align: left;
-      color: #C90A11;
+      color: #FF4A4A;
       margin-top: 7px; }
     .contact-wrapper .popup-side-content-right .btn-primary p {
       text-align: left;
@@ -576,7 +562,7 @@
   .contact-wrapper .contact-form-wrapper p {
     margin-bottom: 10px; }
     .contact-wrapper .contact-form-wrapper p span {
-      color: #C90A11; }
+      color: #FF4A4A; }
   .contact-wrapper .contact-form-wrapper .captcha {
     min-height: 20px;
     color: #5a5a5a;
@@ -592,7 +578,7 @@
     overflow: visible !important; }
   @media screen and (max-width: 767px) {
     .contact-wrapper {
-      margin-bottom: 75px; } }
+      margin: 75px auto; } }
 
 .modal-custom .modal-dialog .modal-content .modal-body .address {
   display: block;
