--- a/src/assets/Content/default/sass/_variables.scss
+++ b/src/assets/Content/default/sass/_variables.scss
@@ -49,7 +49,7 @@ $color-title: #333;
 $color-text: #5a5a5a;
 
 $color-white: #fff;
-$color-red: #C90A11;
+$color-red: #FF4A4A;
 $color-blue: #00698C;
 $color-green: #067169;
 $color-hover: #000;
