--- a/src/app/header-login/header-login.component.html
+++ b/src/app/header-login/header-login.component.html
@@ -1,23 +1,14 @@
 <div id="header" class="header-login">
-  <div class="bottom-menu-wrapper-login">
+  <div class="bottom-menu-wrapper">
     <div class="wrapper">
-      <div class="row">
-        <div class="bg-logo">
-          <h1 class="logo">
-            <a href="/">
-              <img src="/assets/Images/logos/logo-m.png" class="visible-lg-block" />
-              <img src="/assets/Images/logos/logo-m.png" class="visible-md-block visible-sm-block visible-xs-block" />
-            </a>
-          </h1>
-        </div>
-        <!-- <div class="col-md-10">
-          <div class="semi">
-          </div>
-        </div> -->
-
+      <div class="bg-logo">
+        <h1 class="logo">
+          <a href="/">
+            <img src="/assets/Images/logos/logo-m.jpg" />
+          </a>
+        </h1>
       </div>
     </div>
   </div>
-
 </div>
 <!-- header -->
