--- a/src/app/regular-list/regular-list.component.html
+++ b/src/app/regular-list/regular-list.component.html
@@ -2,7 +2,7 @@
 <div class="" id="maincontainer-wrapper">
   <div class="page-content-wrapper">
     <div class="mutual-fund-wrapper" *ngIf="page == 'regular-purchase'">
-      <div class="container">
+      <div class="max-width-wrapper">
         <div class="row">
           <div class="col-md-12">
             <div class="tabs-menu-wrapper">
@@ -72,12 +72,12 @@
                   <div class="col-md-12">
                     <H4 class="text-left">ซื้อหน่วยลงทุนแบบประจำ</H4>
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-9">
                     <div class="row">
                       <div class="col-md-4">
                         <span>กองทุน</span>
                       </div>
-                      <div class="col-md-8">
+                      <div class="col-md-6">
                         <div class="select-wrapper inline-block">
                           <select name="ddlLink" id="ddlLink">
                             <option value="0" selected="">KFCRASH - กองทุนกรุงศรีตราสารเงิน</option>
@@ -89,7 +89,7 @@
                       <div class="col-md-4">
                         <span>หักบัญชีธนาคาร</span>
                       </div>
-                      <div class="col-md-8">
+                      <div class="col-md-6">
                         <div class="select-wrapper inline-block">
 
                           <select name="ddlLink" id="ddlLink">
@@ -103,12 +103,12 @@
                       <div class="col-md-4">
                         <span>จำนวน(บาท)</span>
                       </div>
-                      <div class="col-md-4">
+                      <div class="col-md-3">
                         <div class="input-wrapper ">
                           <input id="name" name="name" maxlength="30" type="text" class="bg-gray" placeholder="0">
                         </div>
                       </div>
-                      <div class="col-md-4">
+                      <div class="col-md-3">
                         <div class="select-wrapper inline-block">
 
                           <select name="ddlLink" id="ddlLink">
@@ -121,19 +121,19 @@
 
                     </div>
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-9">
                     <div class="row">
                       <div class="col-md-4">
                         <span>เงื่อนไข</span>
                       </div>
-                      <div class="col-md-4">
+                      <div class="col-md-3">
                         <div class="custom-radio-between">
                           <input value="101" id="101" name="rad1" type="radio" checked>
                           <label for="101"></label>
                           <p>รายเดือน</p>
                         </div>
                       </div>
-                      <div class="col-md-4">
+                      <div class="col-md-3">
                         <div class="select-wrapper inline-block">
 
                           <select name="ddlLink" id="ddlLink">
@@ -148,7 +148,7 @@
                       <div class="col-md-4">
                         <span>ระยะเวลาเริ่มต้น</span>
                       </div>
-                      <div class="col-md-4">
+                      <div class="col-md-3">
                         <div class="input-wrapper">
                           <input class="form-control textinput dateinput bg-gray" id="startDate" placeholder="วว/ดด/ปปปป" name="date" type="text">
                         </div>
@@ -158,7 +158,7 @@
                       <div class="col-md-4">
                         <span>ระยะเวลาสิ้นสุด</span>
                       </div>
-                      <div class="col-md-4">
+                      <div class="col-md-3">
                         <div class="input-wrapper">
                           <input class="form-control textinput dateinput bg-gray" id="startDate" placeholder="วว/ดด/ปปปป" name="date" type="text">
                         </div>
@@ -166,13 +166,13 @@
                     </div>
 
                     <div class="row">
-                      <div class="col-md-4 offset-4">
+                      <div class="col-md-3 offset-md-4">
                         <button class="btn-med btn-primary" (click)="checkpage('signup1')">
                           ตกลง
                           <i class="fa fa-angle-right" aria-hidden="true"></i>
                         </button>
                       </div>
-                      <div class="col-md-4">
+                      <div class="col-md-3">
                         <button class="btn-med btn-cancel" (click)="checkpage('signup1')">
                           ยกเลิก
                           <i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -203,7 +203,7 @@
       </div>
     </div>
     <div class="mutual-fund-wrapper" *ngIf="page == 'regular-sell'">
-      <div class="container">
+      <div class="max-width-wrapper">
         <div class="row">
           <div class="col-md-12">
             <div class="tabs-menu-wrapper">
@@ -274,12 +274,12 @@
                     <H4 class="text-left">ขายคืนหน่วยลงทุนแบบประจำ</H4>
                     <!-- <p>ขั้นตอนที่ 1 เลือกลงทุนและใส่จำนวนที่ต้องการ</p> -->
                   </div>
-                  <div class="col-md-8">                    
+                  <div class="col-md-9">                    
                     <div class="row">
                       <div class="col-md-4">
                         <span>กองทุนต้นทาง</span>
                       </div>
-                      <div class="col-md-8">
+                      <div class="col-md-6">
                         <div class="select-wrapper inline-block">
 
                           <select name="ddlLink" id="ddlLink">
@@ -341,17 +341,17 @@
                       </table>
                     </div>
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-9">
                     <div class="row">
                       <div class="col-md-4">
                         <span>จำนวนที่ขายคืน</span>
                       </div>
-                      <div class="col-md-4">
+                      <div class="col-md-3">
                         <div class="input-wrapper ">
                           <input id="name" name="name" maxlength="30" type="text" class="bg-gray" placeholder="0">
                         </div>
                       </div>
-                      <div class="col-md-4">
+                      <div class="col-md-3">
                         <div class="select-wrapper inline-block">
 
                           <select name="ddlLink" id="ddlLink">
@@ -366,7 +366,7 @@
                       <div class="col-md-4">
                         <span>รับเงินค่าขายคืน</span>
                       </div>
-                      <div class="col-md-8">
+                      <div class="col-md-6">
                         <div class="select-wrapper inline-block">
 
                           <select name="ddlLink" id="ddlLink">
@@ -381,14 +381,14 @@
                         <div class="col-md-4">
                           <span>เงื่อนไข</span>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                           <div class="custom-radio-between">
                             <input value="101" id="101" name="rad1" type="radio" checked>
                             <label for="101"></label>
                             <p>รายเดือน</p>
                           </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                           <div class="select-wrapper inline-block">
   
                             <select name="ddlLink" id="ddlLink">
@@ -403,7 +403,7 @@
                         <div class="col-md-4">
                           <span>ระยะเวลาเริ่มต้น</span>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                           <div class="input-wrapper">
                             <input class="form-control textinput dateinput bg-gray" id="startDate" placeholder="วว/ดด/ปปปป" name="date" type="text">
                           </div>
@@ -413,20 +413,20 @@
                         <div class="col-md-4">
                           <span>ระยะเวลาสิ้นสุด</span>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                           <div class="input-wrapper">
                             <input class="form-control textinput dateinput bg-gray" id="startDate" placeholder="วว/ดด/ปปปป" name="date" type="text">
                           </div>
                         </div>
                       </div>
                     <div class="row">
-                      <div class="col-md-4 offset-4">
+                      <div class="col-md-3 offset-md-4">
                         <button class="btn-med btn-primary" (click)="checkpage('signup1')">
                           ตกลง
                           <i class="fa fa-angle-right" aria-hidden="true"></i>
                         </button>
                       </div>
-                      <div class="col-md-4">
+                      <div class="col-md-3">
                         <button class="btn-med btn-cancel" (click)="checkpage('signup1')">
                           ยกเลิก
                           <i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -464,7 +464,7 @@
 
     </div>
     <div class="mutual-fund-wrapper" *ngIf="page == 'regular-exchange'">
-        <div class="container">
+        <div class="max-width-wrapper">
           <div class="row">
             <div class="col-md-12">
               <div class="tabs-menu-wrapper">
@@ -535,12 +535,12 @@
                       <H4 class="text-left">สับเปลี่ยนหน่วยลงทุนแบบประจำ</H4>
                       <!-- <p>ขั้นตอนที่ 1 เลือกลงทุนและใส่จำนวนที่ต้องการ</p> -->
                     </div>
-                    <div class="col-md-8">                    
+                    <div class="col-md-9">                    
                       <div class="row">
                         <div class="col-md-4">
                           <span>กองทุนต้นทาง</span>
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-md-6">
                           <div class="select-wrapper inline-block">
   
                             <select name="ddlLink" id="ddlLink">
@@ -602,17 +602,17 @@
                         </table>
                       </div>
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-9">
                       <div class="row">
                         <div class="col-md-4">
                           <span>สับเปลี่ยนจำนวน</span>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                           <div class="input-wrapper ">
                             <input id="name" name="name" maxlength="30" type="text" class="bg-gray" placeholder="0">
                           </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                           <div class="select-wrapper inline-block">
   
                             <select name="ddlLink" id="ddlLink">
@@ -627,7 +627,7 @@
                         <div class="col-md-4">
                           <span>กองทุนปลายทาง</span>
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-md-6">
                           <div class="select-wrapper inline-block">
   
                             <select name="ddlLink" id="ddlLink">
@@ -642,14 +642,14 @@
                           <div class="col-md-4">
                             <span>เงื่อนไข</span>
                           </div>
-                          <div class="col-md-4">
+                          <div class="col-md-3">
                             <div class="custom-radio-between">
                               <input value="101" id="101" name="rad1" type="radio" checked>
                               <label for="101"></label>
                               <p>รายเดือน</p>
                             </div>
                           </div>
-                          <div class="col-md-4">
+                          <div class="col-md-3">
                             <div class="select-wrapper inline-block">
     
                               <select name="ddlLink" id="ddlLink">
@@ -664,7 +664,7 @@
                           <div class="col-md-4">
                             <span>ระยะเวลาเริ่มต้น</span>
                           </div>
-                          <div class="col-md-4">
+                          <div class="col-md-3">
                             <div class="input-wrapper">
                               <input class="form-control textinput dateinput bg-gray" id="startDate" placeholder="วว/ดด/ปปปป" name="date" type="text">
                             </div>
@@ -674,20 +674,20 @@
                           <div class="col-md-4">
                             <span>ระยะเวลาสิ้นสุด</span>
                           </div>
-                          <div class="col-md-4">
+                          <div class="col-md-3">
                             <div class="input-wrapper">
                               <input class="form-control textinput dateinput bg-gray" id="startDate" placeholder="วว/ดด/ปปปป" name="date" type="text">
                             </div>
                           </div>
                         </div>
                       <div class="row">
-                        <div class="col-md-4 offset-4">
+                        <div class="col-md-3 offset-md-4">
                           <button class="btn-med btn-primary" (click)="checkpage('signup1')">
                             ตกลง
                             <i class="fa fa-angle-right" aria-hidden="true"></i>
                           </button>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                           <button class="btn-med btn-cancel" (click)="checkpage('signup1')">
                             ยกเลิก
                             <i class="fa fa-angle-right" aria-hidden="true"></i>
