--- a/src/assets/Content/default/sass/_global.scss
+++ b/src/assets/Content/default/sass/_global.scss
@@ -79,7 +79,7 @@ if it's not present, don't show loader */
 }
 .color-red{
     color: $color-red !important;
-    font-size: 22px;
+    // font-size: 22px;
 }
 .bg-little-blue{
     background-color: rgba(0, 103, 137,0.9) !important;
@@ -291,6 +291,17 @@ input[type=reset] {
         color: $color-white;
         border: 1px solid $color-red;
         background-color: $color-red;
+
+        &:hover {
+            border: 1px solid $color-hover;
+            background-color: $color-hover;
+        }
+    } 
+    &.btn-blue {
+        position: relative;
+        color: $color-white;
+        border: 1px solid $color-blue;
+        background-color: $color-blue;
 
         &:hover {
             border: 1px solid $color-hover;
@@ -578,7 +589,7 @@ input[type=reset] {
                         line-height: $text-x-small;
                         font-weight: normal;
                         border: none;
-                        text-align: left;
+                        text-align: center;
 
                         &.txt-right {
                             text-align: right;
@@ -593,7 +604,7 @@ input[type=reset] {
                         }
 
                         &:first-child {
-                            max-width: 200px;
+                            max-width: 340px;
                         }                       
 
                         
@@ -648,7 +659,7 @@ input[type=reset] {
                     &.summary {
                         th {
                             padding: 15px 10px;
-                            font-size: $text-content;
+                            font-size: $text-x-small;
                             line-height: $text-x-small;
                             font-weight: normal;
                             // border: none;
@@ -657,8 +668,10 @@ input[type=reset] {
                             border-top: 2px solid #f5f5f5;
                             border-bottom: 2px solid #f5f5f5;
                             background-color: transparent;
+                            
 
                             &.custom-label {
+                                border: unset;
                                 text-align: right;
                                 color: $color-white;
                                 background-color: $color-primary;
@@ -669,8 +682,12 @@ input[type=reset] {
                 tr {
                     &.line {
                         background: #f5f5f5;                        
-                        text-align: left !important;
+                        
                         color: $color-title;
+                        td{
+                            font-size: $text-x-small;
+                            text-align: left;
+                        }
                     }
                 }
             }
