--- a/src/assets/Content/default/sass/content/login.scss
+++ b/src/assets/Content/default/sass/content/login.scss
@@ -2,25 +2,7 @@
 @import "../helpers/fontface";
 @import "../helpers/mixin_css3";
 
-// body{
-//     background-color: #000;
-// }
-
-// .top-menu-wrapper{
-//     display: none !important;
-// }
-// .bottom-menu-wrapper{
-//     display: none !important;
-// }
-// .footer_sub{
-//     display: none !important;
-// }
-
-#maincontainer-wrapper{
-    // margin-top: 50px;
-}
-#main-wrapper{
-    background-image: url("/assets/Images/banners/banner-login.png");
+#main-wrapper{  
     width: 100%;  
     min-height: 100vh;
     display: -webkit-box;
@@ -31,26 +13,23 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding: 15px;
-    
-    background-position: center;
+    padding: 0;
+    background-image: url("/assets/Images/banners/banner-login.png");
     background-size: cover;
     background-repeat: no-repeat;
 
-  @media screen and (max-width: 767px){
-    background-image: url("/assets/Images/banners/banner-login-m.png");
-    background-size: 100% auto;
-}  
+    @media screen and (max-width: 767px){
+        background-image: url("/assets/Images/banners/banner-login-m.png");
+        background-size: 100% auto;
+    }  
 }
 .copyright {
     display: block;
-    vertical-align: middle;
     text-align: center;
-    // color: $color-white;
     width: 100%;
     z-index: 1;
     text-decoration: none;
-    margin-top: 45%;
+    margin-top: 100px;
     position: relative; 
     
     @media screen and (max-width: 767px){    
@@ -103,7 +82,6 @@
     }
     p {
         margin: 0 auto;
-        // margin-bottom: 15px;
         font-size: $text-x-small;
         line-height: 20px;
         color: $color-text;
@@ -118,13 +96,14 @@
     }
 
 }
+
 #main-wrapper.main-login-wrapper{
-    // padding-top: 200px;
     @media screen and (max-width: 767px){
         padding-top: 70px;
         overflow: auto;
     }
 }
+
 .login-icon{  
     position: relative;
     // overflow: hidden; 
@@ -157,29 +136,24 @@
     max-width: 100%;
     padding: 0;
     margin: 0 auto;
-    // margin-bottom: 400px;
+    margin-top: 240px;
+
     .detail-login-wrapper{
         position: relative;
         max-width: 100%;
         padding: 30px 40px 20px 40px;
         margin: 0 auto;
-        // border-bottom: 5px solid #f5f5f5;
         width: 100%;
+
         h4{
             display: block;
         }
     }
 
-    
-
     .contact-popup {
-        position: static;
-        display: inline-block;
-        vertical-align: top;
-        width: auto;
+        width: 100%;
         height: auto;
-        margin: 0 10px;
-        // background-image: url("/assets/Images/banners/banner-contact.jpg");
+        margin: 0 auto;
     }
 
     .caption-link {
@@ -229,40 +203,36 @@
             display: none !important;
         }  
     }
+
     .refresh{
         margin: 0 -5px;
         padding: 10px 0;
     }
 
     .popup-content {      
-
-        position: absolute;
-        background: rgba(28, 165, 155, 0.8);
-        
+        // position: absolute;
+        background-image: url('/assets/Images/bg/bg-login-box.jpg'); 
+        background-size: cover;
+        background-repeat: no-repeat;    
         min-height: 460px;
         min-width: 100%;
-        // border: 1px solid #a9a9a9;
-        right: 0;
-        top: 150px;
         opacity: 1;
         z-index: 1;
         text-align: left;
         -webkit-transition: all 0.4s ease-in-out;
         -moz-transition: all 0.4s ease-in-out;
         transition: all 0.4s ease-in-out;
-        // margin-top: 10px;
         padding: 20px;
-        // visibility: hidden;
+
         @media screen and (max-width: 767px){    
             position: relative;     
         }
 
-        
-
         h1, h2, h3 {
             margin: 0;
-            margin-bottom: 20px;
-            color: $color-primary;
+            // margin-bottom: 20px;
+            color: $color-white;
+            text-align: center;
         }
 
         p, span {
@@ -339,8 +309,6 @@
             }           
         }
         
-
-
         .btn-close {
             position: absolute;
             top: 10px;
@@ -362,11 +330,6 @@
             -moz-transition: all 0.2s ease-in-out;
             transition: all 0.2s ease-in-out;
             z-index: 20;
-
-            &:hover {
-                /*color: $color-primary;
-                border-color: $color-primary;*/
-            }
         }
 
         .gmap {
@@ -384,15 +347,6 @@
                 color: $color-red;
                 margin-top: 7px;
             }
-            
-        }
-        .btn-primary {
-            
-            // p {
-            //     text-align: left;
-            //     color: $color-primary;
-            //     margin-top: 7px;
-            // }
             
         }
 
@@ -424,15 +378,10 @@
         }
     }
     .popup-side-content-left {      
-
-        position: absolute;
-        background: rgba(28, 165, 155, 0.8);
-        
+        // position: absolute;
+        background: rgba(28, 165, 155, 0.8);        
         height: 460px;
         max-width: 100%;
-        // border: 1px solid #a9a9a9;
-        right: 0;
-        top: 150px;
         opacity: 1;
         z-index: 1;
         text-align: left;
@@ -579,14 +528,11 @@
         }
     }
     .popup-side-content-right {
-        position: absolute;
+        // position: absolute;
         background: rgba(28, 165, 155, 0.8);
         float: right;
         min-width: 100%;
         min-height: 460px;
-        // border: 1px solid #a9a9a9;
-        right: 0;
-        top: 150px;
         opacity: 1;
         z-index: 1;
         text-align: left;
@@ -854,7 +800,7 @@
     }
 
     @media screen and (max-width: 767px){
-        margin-bottom: 75px;
+        margin: 75px auto;
     }
 }
 
